--- a/index.html
+++ b/index.html
@@ -380,14 +380,18 @@
     <h2 id="Paper" style="padding-top: 80px; margin-top: -80px">Paper</h2>
     <div class="paper">
       <div class="paper-grid-container">
-        <div class="item1"><a href="figure/VR2022_OmniSyn_Poster.pdf">
+        <div class="item1">
+          <a href="https://arxiv.org/abs/2202.08752">
+            <img src="figure/arxiv-01.jpg" class="paper-thumbnail"><br>
+            Full Paper
+          </a>
+        </div>
+        <div class="item1">
+          <a href="figure/VR2022_OmniSyn_Poster.pdf">
             <img src="figure/vr-1.png" class="paper-thumbnail"><br>
-            2-page Abstract
-          </a></div>
-        <div class="item1"><a href="https://arxiv.org/abs/2202.08752">
-            <img src="figure/arxiv-01.png" class="paper-thumbnail"><br>
-            Manuscript
-          </a></div>
+            VRW 2022 Abstract
+          </a>
+        </div>
       </div>
     </div>
   </div>
@@ -451,9 +455,17 @@
   </div>
   <div class="container">
     <hr>
-    <h2>Reference</h2>
+    <h2>References</h2>
     <pre>
-      @INPROCEEDINGS{Li2022Omnisyn,
+      @misc{Li2022OmnisynArxiv,
+        doi = {10.48550/ARXIV.2202.08752},
+        url = {https://arxiv.org/abs/2202.08752},
+        author = {Li, David and Zhang, Yinda and Häne, Christian and Tang, Danhang and Varshney, Amitabh and Du, Ruofei},
+        title = {OmniSyn: Synthesizing 360 Videos with Wide-baseline Panoramas},
+        publisher = {arXiv},
+        year = {2022}
+      }
+      @INPROCEEDINGS{Li2022OmnisynVRW,
         author={Li, David and Zhang, Yinda and H\"{a}ne, Christian and Tang, Danhang and Varshney, Amitabh and Du, Ruofei},
         booktitle={2022 IEEE Conference on Virtual Reality and 3D User Interfaces Abstracts and Workshops (VRW)}, 
         title={{OmniSyn}: Synthesizing 360 Videos with Wide-baseline Panoramas}, 
